# FASTAPI-Banking-API-with-AI-ML-Transaction-Fraud-Detection

./: .dockerignore  .gitignore  Makefile  Time-Line.md  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  local.yml  pyproject.toml
.envs/: .env.example
.postman/: resources.yaml
backend/: requirements.txt
backend/app/: main.py
backend/app/api/: main.py
backend/app/api/routes/: home.py
backend/app/api/routes/auth/: activate.py  login.py  logout.py  password_reset.py  refresh.py  register.py
backend/app/api/services/: user_auth.py
backend/app/auth/: models.py  schema.py  utils.py
backend/app/core/: celery_app.py  config.py  db.py  health.py  logging.py  model_registry.py
backend/app/core/emails/: base.py  config.py  tasks.py
backend/app/core/emails/templates/: activation.html  activation.txt  base.html  base.txt  login_otp.html  login_otp.txt  totp_alert.html  totp_alert.txt
backend/app/core/services/: account_lockout.py  activation_email.py  password_reset.py  totp_email.py
backend/app/user_profile/: models.py  schema.py
backend/docker/local/fastapi/: Dockerfile  entrypoint.sh
backend/docker/local/traefik/: traefik.yml
migrations/: env.py
migrations/versions/: 3a9b0d36a7c7_add_totp_fields.py  4a103841fa58_increase_totp_secret_column_length.py  82ae5bfae140_add_user_table.py  865ab9e7233a_add_profile_table.py
postman/collections/NextGen FastAPI Bank/.resources/: definition.yaml
postman/collections/NextGen FastAPI Bank/health/: Health Check.request.yaml
postman/environments/: New Environment.environment.yaml
(+25 files in other folders)
