[project]
name = "banking-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
 "aiosmtplib==3.0.2",
 "alembic==1.14.0",
 "asyncpg==0.30.0",
 "authlib>=1.6.8",
 "babel==2.16.0",
 "celery==5.3.6",
 "cryptography>=46.0.5",
 "email-validator==2.2.0",
 "fastapi-mail==1.4.2",
 "fastapi[standard]>=0.124.0",
 "fernet>=1.0.1",
 "flower==2.0.1",
 "greenlet==3.1.1",
 "httpx>=0.28.1",
 "itsdangerous>=2.2.0",
 "jsonpickle==1.4.2",
 "loguru>=0.7.3",
 "psycopg[binary,pool]>=3.3.2",
 "pwdlib[argon2]>=0.3.0",
 "pydantic-settings==2.7.0",
 "pyjwt==2.10.1",
 "pyotp>=2.9.0",
 "qrcode>=8.2",
 "redis==5.0.3",
 "redisbeat==1.2.6",
 "sqlmodel>=0.0.27",
]
